<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.yourtechcode.javaprogramming.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/ToDo"
        android:scaleType="fitXY"
        android:src="@drawable/javaheader"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <ImageButton
        android:id="@+id/tutorialBtn"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/fggg"
        android:contentDescription="@string/ToDo"
        android:scaleType="fitCenter"
        android:src="@drawable/tutorial"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <ImageButton
        android:id="@+id/exampleBtn"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/fggg"
        android:contentDescription="@string/ToDo"
        android:scaleType="fitCenter"
        android:src="@drawable/exampleqpng"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:text="@string/leftBtn"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tutorialBtn"
        app:layout_constraintEnd_toEndOf="@+id/tutorialBtn"
        app:layout_constraintStart_toStartOf="@+id/tutorialBtn" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:text="@string/rightBtn"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/exampleBtn"
        app:layout_constraintEnd_toEndOf="@+id/exampleBtn"
        app:layout_constraintStart_toStartOf="@+id/exampleBtn" />
</android.support.constraint.ConstraintLayout>
